fixed horizontal scrolling on mobile

--- a/app/assets/stylesheets/application/display.css.sass
+++ b/app/assets/stylesheets/application/display.css.sass
@@ -1,14 +1,13 @@
-html
+html, body
  color: $standard-color
  background: #eee
  width: 100%
  height: 100%
-body
- position: relative
- font-size: 18px
- line-height: 26px
  overflow: hidden
  overflow-y: auto
+ font-size: 18px
+ line-height: 26px
+
 
 h1,h2,h3,h4,h5,h6,p
  font-family: inherit
